Developing the AdminDashboard with desktop-only layout

--- a/FrontEnd/OnlineStore.BlazorUI/Features/_Imports.razor
+++ b/FrontEnd/OnlineStore.BlazorUI/Features/_Imports.razor
@@ -8,5 +8,6 @@
 @using Microsoft.JSInterop
 @using OnlineStore.BlazorUI
 @using OnlineStore.BlazorUI.Layout
-@using OnlineStore.BlazorUI.Features.Layouts
 @using OnlineStore.BlazorUI.Features.Pages
+@using OnlineStore.BlazorUI.Features.Layouts
+@using OnlineStore.BlazorUI.Features.Svgs
