--- a/FrontEnd/OnlineStore.BlazorUI/Layout/MainLayout.razor
+++ b/FrontEnd/OnlineStore.BlazorUI/Layout/MainLayout.razor
@@ -11,6 +11,7 @@
 
         <article class="content px-4">
             @Body
+            <a href="/mainpage">Go To Main DaShboard</a>
         </article>
     </main>
 </div>
