Implement 'Add Role' feature in admin panel

--- a/FrontEnd/OnlineStore.BlazorUI/Features/Layouts/AdminDashboardLayout.razor
+++ b/FrontEnd/OnlineStore.BlazorUI/Features/Layouts/AdminDashboardLayout.razor
@@ -5,7 +5,7 @@
         <nav class="cell medium-2 sidebar">
             <SideBarMenu></SideBarMenu>
         </nav>
-        <main>
+        <main class="cell medium-10">
             @Body
         </main>
     </div>
