--- a/FrontEnd/OnlineStore.BlazorUI/Features/Layouts/SideBarMenu.razor
+++ b/FrontEnd/OnlineStore.BlazorUI/Features/Layouts/SideBarMenu.razor
@@ -18,7 +18,7 @@
 			</span>
 		</span>
 		<ul class="sub-nav @(isSububMenuShown? "subMenueSettinghidden":"subMenueSettingShown")">
-			<li class="sub-Item-nav"><a href="#"><span class="Title-nav">Roles</span></a></li>
+			<li class="sub-Item-nav"><a href="/role"><span class="Title-nav">Roles</span></a></li>
 		</ul>
 	</li>
 </ul>
