--- a/FrontEnd/OnlineStore.BlazorUI/Features/Pages/RoleMangementPage.razor
+++ b/FrontEnd/OnlineStore.BlazorUI/Features/Pages/RoleMangementPage.razor
@@ -12,6 +12,46 @@
             </div>
         </div>
     </EditForm>
+    <main class="grid-container">
+        <div class="grid-x grid-padding-x">
+            <div class="cell medium-12">
+                <div class="table">
+                    <div class="table_body">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Row</th>
+                                    <th>Role</th>
+                                    <th>Actions</th>
+                                    <th>Actions</th
+                                </tr>
+                            </thead>
+                            <tbody>
+                                    <td>1</td>
+                                    <td>User</td>
+                                    <td class="action">
+                                        <a href="#" class="del"><DelSvg></DelSvg><span>Delete</span></a>
+                                    </td>
+                                    <td>
+                                 <EditForm class="editFormeditForm" Model=@person>
+                                    <div class="grid-container">
+                                       <div class="grid-x grid-padding-x">
+                                            <div class="cell medium-6 input-box-edit">
+                                                <InputText @bind-Value="person.Name" typeof="text" required="required" />
+                                                <span class="title">Edit role</span>
+                                            </div>
+                                        <button class="edit"><EditSvg></EditSvg><span>Edit</span></button>
+                                        </div>
+                                    </div>
+                                </EditForm>
+                                    </td>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 @code{
     public class PersonModel
     {
@@ -19,5 +59,5 @@
         public string Family { get; set; }
     }
     private PersonModel person = new();
-
 }
+
