--- a/FrontEnd/OnlineStore.BlazorUI/wwwroot/css/app.css
+++ b/FrontEnd/OnlineStore.BlazorUI/wwwroot/css/app.css
@@ -116,30 +116,56 @@ html {
         transform: translateX(10px) translateY(-10px);
         font-size: 0.65rem;
         padding: 0 10px;
-/*        background: var(--main-background-color);
+        /*        background: var(--main-background-color);
         color: var(--sidebar-background-color);*/
         letter-spacing: 0.2em;
         color: var(--text-light-color);
         background: var(--sidebar-background-color);
-        border-radius:7px;
+        border-radius: 7px;
+    }
+
+.input-box-edit input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid var(--border-color-input-form);
+    background-color: var(--input-background-color);
+    border-radius: 5px;
+    outline: none;
+    color: var(--text-input-color);
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+    .input-box-edit input:valid ~ span,
+    .input-box-edit input:focus ~ span {
+        /* color: #3c5666;*/
+
+        transform: translateX(10px) translateY(-10px);
+        font-size: 0.65rem;
+        padding: 0 10px;
+        /*        background: var(--main-background-color);
+        color: var(--sidebar-background-color);*/
+        letter-spacing: 0.2em;
+        color: var(--text-light-color);
+        background: #daa520;
+        border-radius: 7px;
     }
 /*.input-box:nth-child(2) input:valid ~ span,
 .input-box:nth-child(2) input:focus ~ span {
     background: var(--sidebar-background-color);
     color: var(--text-light-color);
 }*/
-   /*.input-box input:valid,
+/*.input-box input:valid,
     .input-box input:focus{*/
-        /* color: #3c5666;*/
-        /*color: var(--sidebar-background-color);
+/* color: #3c5666;*/
+/*color: var(--sidebar-background-color);
         transform: translateX(10px) translateY(-10px);
         font-size: 0.65rem;
         padding: 0 10px;
         background: var(--main-background-color);
         letter-spacing: 0.2em;
     }*/
-    
-        /*html, body {
+/*html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
@@ -176,19 +202,19 @@ a, .btn-link {
 .validation-message {
     color: red;
 }*/
-        #blazor-error-ui {
-        color-scheme: light only;
-        background: lightyellow;
-        bottom: 0;
-        box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
-        box-sizing: border-box;
-        display: none;
-        left: 0;
-        padding: 0.6rem 1.25rem 0.7rem 1.25rem;
-        position: fixed;
-        width: 100%;
-        z-index: 1000;
-    }
+#blazor-error-ui {
+    color-scheme: light only;
+    background: lightyellow;
+    bottom: 0;
+    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
+    box-sizing: border-box;
+    display: none;
+    left: 0;
+    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+}
 
     #blazor-error-ui .dismiss {
         cursor: pointer;
