--- a/FrontEnd/OnlineStore.BlazorUI/wwwroot/css/app.css
+++ b/FrontEnd/OnlineStore.BlazorUI/wwwroot/css/app.css
@@ -94,6 +94,7 @@ html {
 }
 
 .form {
+    position:sticky;
     display: flex;
     padding: 25px;
     border-bottom: 2px solid var(--sidebar-background-color);
